--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "@types/d3-scale-chromatic": "^3.0.0",
     "@types/lodash": "^4.14.177",
+    "@types/sortablejs": "^1.10.7",
     "@types/uikit": "^3.3.2",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
@@ -27,6 +28,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "firebase": "^9.2.0",
     "lodash": "^4.17.21",
+    "sortablejs": "^1.14.0",
     "uikit": "^3.8.0",
     "xstate": "^4.26.0"
   }
