--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "test": "jest",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "deploy": "firebase deploy --only hosting"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@tsconfig/svelte": "^2.0.1",
     "@types/d3-scale-chromatic": "^3.0.0",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.177",
     "@types/sortablejs": "^1.10.7",
     "@types/uikit": "^3.3.2",
+    "jest": "^27.4.5",
+    "source-map-support": "^0.5.21",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
+    "svelte-jester": "^2.1.5",
     "svelte-preprocess": "^4.7.2",
+    "ts-node": "^10.4.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
