--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
     "@types/d3-scale-chromatic": "^3.0.0",
     "@types/jest": "^27.4.0",
