--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "@sentry/browser": "^6.17.1",
     "chart.js": "^3.6.0",
     "d3-scale-chromatic": "^3.0.0",
     "firebase": "^9.2.0",
