--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/sortablejs": "^1.10.7",
     "@types/uikit": "^3.3.2",
     "jest": "^27.4.5",
+    "less": "^3.13.1",
     "source-map-support": "^0.5.21",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
